fix family tree endpoint
